--- a/manifest.json
+++ b/manifest.json
@@ -1,52 +1,42 @@
 {
-	"manifest_version": 2,
+  "manifest_version": 2,
 
-	"name": "Extra GitHub PR Info",
-	"short_name": "Extra GitHub PR Info",
-	"description": "Edits to the GitHub UI to make it more informative",
-	"version": "1.4",
-	"author": "pytorch",
+  "name": "Extra GitHub PR Info",
+  "short_name": "Extra GitHub PR Info",
+  "description": "Edits to the GitHub UI to make it more informative",
+  "version": "1.5",
+  "author": "pytorch",
 
-	"icons": { "16": "icons/icon16.png",
-		"48": "icons/icon48.png",
-		"128": "icons/icon128.png" },
+  "icons": {
+    "16": "icons/icon16.png",
+    "48": "icons/icon48.png",
+    "128": "icons/icon128.png"
+  },
 
-	"options_ui": {
-		"page": "options.html",
-		"chrome_style": true
-	},
-	"content_scripts": [{
-		"matches": [
-			"*://github.com/*/pulls*",
-			"*://github.com/pulls*"
-		],
-		"js": [
-			"lib.js",
-			"show_build_status.js"
-		],
-		"run_at": "document_end"
-	}, {
-		"matches": [
-			"*://github.com/*"
-		],
-		"js": ["disable_pjax.js"],
-		"run_at": "document_end"
-	}, {
-		"matches": [
-			"*://github.com/*/*/pull/*"
-		],
-		"js": [
-			"lib.js",
-			"unminimize_comments.js"
-		],
-		"run_at": "document_start"
-	}],
-	"background": {
-		"scripts": ["remove_cors.js"],
-		"persistent": true
-	},
-	"permissions": [
-		"storage",
-		"https://github.com/*"
-	]
+  "options_ui": {
+    "page": "options.html",
+    "chrome_style": true
+  },
+  "content_scripts": [
+    {
+      "matches": ["*://github.com/*/pulls*", "*://github.com/pulls*"],
+      "js": ["lib.js", "show_build_status.js"],
+      "run_at": "document_end"
+    },
+    {
+      "matches": ["*://github.com/*"],
+      "js": ["disable_pjax.js"],
+      "run_at": "document_end"
+    },
+    {
+      "matches": ["*://github.com/*/*/pull/*"],
+      "js": ["lib.js", "unminimize_comments.js", "sort_signals.js"],
+      "run_at": "document_start"
+    }
+  ],
+  "background": {
+    "scripts": ["remove_cors.js"],
+    "persistent": true
+  },
+  "permissions": ["storage", "https://github.com/*"]
 }
